[package]
name = "diesel_pg"
version = "0.1.0"
authors = ["gtors <andrey.torsunov@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel.git", branch = "master" }
diesel_derives = { git = "https://github.com/diesel-rs/diesel.git", branch = "master" }
pq-sys = { version = ">=0.3.0, <0.5.0" }
byteorder = "1.0"
bitflags = "1.0"
quickcheck = { version = "0.4", optional = true }
serde_json = { version = ">=0.8.0, <2.0", optional = true }
chrono = { version = "0.4", optional = true }
libc = { version = "0.2.0", optional = true }
ipnetwork = { version = ">=0.12.2, <0.14.0", optional = true }
num-bigint = { version = ">=0.1.41, <0.3", optional = true }
num-traits = { version = "0.2", optional = true }
num-integer = { version = "0.1.32", optional = true }
bigdecimal = { version = ">= 0.0.10, <= 0.1.0", optional = true }
uuid = { version = ">=0.2.0, <0.7.0", optional = true, features = ["use_std"] }
uuidv07 = { version = "0.7.0", optional = true, package = "uuid"}

[patch.crates-io]
diesel_derives = { git = "https://github.com/diesel-rs/diesel.git", branch = "master" }

[dev-dependencies]
cfg-if = "0.1.0"
dotenv = ">=0.8, <0.11"
quickcheck = "0.4"

[features]
extras = ["chrono", "serde_json", "uuid", "network-address", "numeric"]
network-address = ["ipnetwork", "libc"]
numeric = ["num-bigint", "bigdecimal", "num-traits", "num-integer"]
